// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Listing Data Set Success scenarios should create a Listing partitioned data set 1`] = `
"================Z/OS FILES CREATE DATA-SET-LISTING===============
Data set created successfully.
"
`;

exports[`Create Listing Data Set Success scenarios should create a Listing partitioned data set and print attributes 1`] = `
"================Z/OS FILES CREATE DATA-SET-LISTING ===============
{
  \\"success\\": true,
  \\"exitCode\\": 0,
  \\"message\\": \\"\\",
  \\"stdout\\": \\"Data set created successfully.\\\\n\\",
  \\"stderr\\": \\"\\",
  \\"data\\": {
    \\"success\\": true,
    \\"commandResponse\\": \\"Data set created successfully.\\"
  }
}"
`;

exports[`Create Listing Data Set Success scenarios should create a Listing partitioned data set with response timeout 1`] = `
"================Z/OS FILES CREATE DATA-SET-LISTING===============
Data set created successfully.
"
`;

exports[`Create Listing Data Set Success scenarios should create a Listing partitioned data set with specified primary allocation 1`] = `
"================Z/OS FILES CREATE DATA-SET-LISTING===============
dsorg:     PO
alcunit:   CYL
primary:   20
secondary: 3
recfm:     FBA
blksize:   27930
lrecl:     133
dirblk:    25
dsntype:   LIBRARY

Data set created successfully.
"
`;

exports[`Create Listing Data Set Success scenarios should create a Listing partitioned data set with specified primary and secondary allocation 1`] = `
"================Z/OS FILES CREATE DATA-SET-LISTING===============
dsorg:     PO
alcunit:   CYL
primary:   20
secondary: 5
recfm:     FBA
blksize:   27930
lrecl:     133
dirblk:    25
dsntype:   LIBRARY

Data set created successfully.
"
`;

exports[`Create Listing Data Set Success scenarios should create a Listing partitioned data set with specified size 1`] = `
"================Z/OS FILES CREATE DATA-SET-LISTING===============
dsorg:     PO
alcunit:   CYL
primary:   2
secondary: 3
recfm:     FBA
blksize:   27930
lrecl:     133
dirblk:    25
dsntype:   LIBRARY

Data set created successfully.
"
`;

exports[`Create Listing Data Set without profiles should create a Listing partitioned data set 1`] = `
"Data set created successfully.
"
`;
